--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.mycompany</groupId>
+	<groupId>e2db758a-a779-46e3-a4f1-e3e8522a390d</groupId>
 	<artifactId>pgp-mule-demo-api</artifactId>
 	<version>1.0.2-SNAPSHOT</version>
 	<packaging>mule-application</packaging>
@@ -47,6 +47,14 @@
 			<classifier>mule-plugin</classifier>
 		</dependency>
 	</dependencies>
+	<distributionManagement>
+		<repository>
+			<id>anypoint-exchange-v3</id>
+			<name>Bradesco Bank Exchange</name>
+			<url>https://maven.anypoint.mulesoft.com/api/v3/organizations/${groupId}/maven</url>
+			<layout>default</layout>
+		</repository>
+	</distributionManagement>	
 
 	<repositories>
 		<repository>
